project(libtux4kidsadmin)
cmake_minimum_required(VERSION 2.6)

#SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR} )

SET(LIBTUX4KIDSADMIN_SOURCES 
	libtux4kidsadmin.cpp
	applicationDir.cpp )

SET(LIBTUX4KIDSADMIN_MOC_HEADERS 
	applicationDir.h )

# enable warnings
ADD_DEFINITIONS( -Wall )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

QT4_WRAP_CPP( LIBTUX4KIDSADMIN_MOC_SOURCES ${LIBTUX4KIDSADMIN_MOC_HEADERS} )

ADD_LIBRARY(tux4kidsadmin SHARED ${LIBTUX4KIDSADMIN_SOURCES} ${LIBTUX4KIDSADMIN_MOC_SOURCES} )
