project(libtux4kidsadmin_tuxmath)
cmake_minimum_required(VERSION 2.6)

#SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR} )

SET(LIBTUX4KIDSADMIN_TUXMATH_SOURCES 
	libtux4kidsadmin_tuxmath.cpp
	applicationDirTuxmath.cpp )

SET(LIBTUX4KIDSADMIN_TUXMATH_MOC_HEADERS 
	applicationDirTuxmath.h )

# enable warnings
ADD_DEFINITIONS( -Wall )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ../libtux4kidsadmin )
QT4_WRAP_CPP( LIBTUX4KIDSADMIN_TUXMATH_MOC_SOURCES ${LIBTUX4KIDSADMIN_TUXMATH_MOC_HEADERS} )

ADD_LIBRARY(tux4kidsadmin_tuxmath SHARED ${LIBTUX4KIDSADMIN__TUXMATHSOURCES} ${LIBTUX4KIDSADMIN_TUXMATH_MOC_SOURCES} )
