project(libtux4kidsadmin_tuxmath)
cmake_minimum_required(VERSION 2.6)

SET(LIBTUX4KIDSADMIN_TUXMATH_SOURCES 
	libtux4kidsadmin_tuxmath.cpp
	profileDirTuxmath.cpp )

SET(LIBTUX4KIDSADMIN_TUXMATH_MOC_HEADERS 
	profileDirTuxmath.h )

# enable warnings
ADD_DEFINITIONS( -Wall -DLIBTUX4KIDSADMIN_TUXMATH_LIBRARY )
#ADD_DEFINITIONS(-DQT_NO_DEBUG)

FIND_PACKAGE( Qt4 REQUIRED )
SET(QT_DONT_USE_QTGUI 1)
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ../libtux4kidsadmin )
QT4_WRAP_CPP( LIBTUX4KIDSADMIN_TUXMATH_MOC_SOURCES ${LIBTUX4KIDSADMIN_TUXMATH_MOC_HEADERS} )

ADD_LIBRARY(tux4kidsadmin_tuxmath SHARED ${LIBTUX4KIDSADMIN_TUXMATH_SOURCES} ${LIBTUX4KIDSADMIN_TUXMATH_MOC_SOURCES} )
TARGET_LINK_LIBRARIES( tux4kidsadmin_tuxmath ${QT_LIBRARIES} tux4kidsadmin )