PROJECT(tux4kids-admin)
cmake_minimum_required(VERSION 2.6)

SET(TUX4KIDS-ADMIN_SOURCES 
	main.cpp
	mainWindow.cpp
	mainController.cpp )

SET(TUX4KIDS-ADMIN_MOC_HEADERS 
	mainWindow.h
	mainController.h 
	../plugins/pluginInterface.h )

SET(TUX4KIDS-ADMIN_UIS mainWindow.ui)

# enable warnings
ADD_DEFINITIONS( -Wall )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ../plugins/ )

QT4_WRAP_UI( TUX4KIDS-ADMIN_UI_HEADERS ${TUX4KIDS-ADMIN_UIS} )
QT4_WRAP_CPP( TUX4KIDS-ADMIN_MOC_SOURCES ${TUX4KIDS-ADMIN_MOC_HEADERS} )
#QT4_AUTOMOC( TUX4KIDS-ADMIN_SOURCES  )

INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
ADD_EXECUTABLE( ../tux4kids-admin ${TUX4KIDS-ADMIN_SOURCES} ${TUX4KIDS-ADMIN_MOC_SOURCES} ${TUX4KIDS-ADMIN_U__HEADERS} )
TARGET_LINK_LIBRARIES( ../tux4kids-admin ${QT_LIBRARIES} )

