PROJECT(tuxmathPlugin)
cmake_minimum_required(VERSION 2.6)

SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../ )

# enable warnings
ADD_DEFINITIONS( -Wall )
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
#ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

SET(TUXMATH_PLUGIN_MOC_HEADERS tuxmathPlugin.h)
SET(TUXMATH_PLUGIN_SOURCES tuxmathPlugin.cpp)

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ../ ${CMAKE_CURRENT_BINARY_DIR} )

QT4_WRAP_CPP( TUXMATH_PLUGIN_MOC_SOURCES ${TUXMATH_PLUGIN_MOC_HEADERS} )

ADD_LIBRARY(TuxmathPlugin SHARED ${TUXMATH_PLUGIN_MOC_SOURCES} ${TUXMATH_PLUGIN_SOURCES} )
TARGET_LINK_LIBRARIES( TuxmathPlugin ${QT_LIBRARIES} )

